# git-surgeon

./: .gitignore  .workmux.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
scripts/: install.sh
skills/git-surgeon/: SKILL.md
src/: blame.rs  diff.rs  hunk.rs  hunk_id.rs  main.rs  patch.rs  skill.rs
tests/: conftest.py  test_blame.py  test_commit.py  test_discard.py  test_fixup.py  test_hunks.py  test_lines.py  test_reword.py  test_show.py  test_split.py  test_squash.py  test_stage.py  test_undo.py  test_undo_file.py  test_unstage.py
