[package]
name = "git-surgeon"
version = "0.1.0"
edition = "2024"
authors = [""]
description = "Non-interactive hunk-level git staging for AI agents"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
sha1 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.14"
